<resources>
    <string name="app_name">DBSPROJECT</string>

    <string name="strPrivacyContactUs">By registration i agree to this <a href="https://financecapitalsupport.blogspot.com/2023/04/privacy-policy-of-true-loan-fast-cash.html">Terms &amp; Conditions</a> AND <a href="https://financecapitalsupport.blogspot.com/2023/04/privacy-policy-of-true-loan-fast-cash.html">Privacy Policy</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_desc">Desc</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>


    <string name="txt_brand_name">Maker</string>
    <string name="txt_model_name">Model Name</string>
    <string name="txt_variant">Variant</string>
    <string name="txt_year">Year</string>
    <string name="txt_expected_value">Expected Value</string>
    <string name="txt_vehicle_condition">Vehicle Condition</string>
    <string name="txt_fair">FAIR</string>
    <string name="txt_good">GOOD</string>
    <string name="txt_very_good">VERY GOOD</string>
    <string name="txt_excellent">EXCELLENT</string>
    <string name="txt_price_disclaimer">** Price is calculated using extensive research, in-depth dealer relationships and advanced price indexing tools. The actual price of the vehicle may vary based on actual condition of the vehicle and several other parameters. We will not be held responsible for any losses incurred or liabilities arising by the party relying on this report.</string>
    <string name="activity_resale_value_result">Resale Value Result</string>
    <string name="format_kms_driven">%1$s Kms</string>
    <string name="txt_km_driven">Kms Driven</string>

    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>


</resources>