<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Seller.EnterSellinPrice_Activity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_bold"
                android:text="2014, Maruti Swift"
                android:textColor="@color/purple_200"
                android:textSize="17dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_box">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:id="@+id/cvBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/brand"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/txt_brand_name"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/brandValue"
                            style="@style/text_bottom_sheet_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:gravity="right"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/model"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/txt_model_name"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/modelValue"
                            style="@style/text_bottom_sheet_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:gravity="right"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvVariant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/variant"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/txt_variant"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/variantValue"
                            style="@style/text_bottom_sheet_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:gravity="right"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/year"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/txt_year"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/yearValue"
                            style="@style/text_bottom_sheet_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:gravity="right"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvKmDriven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/kmDriven"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/txt_km_driven"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/kmDrivenValue"
                            style="@style/text_bottom_sheet_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:gravity="right"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvlocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/location"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:fontFamily="@font/poppins_bold"
                            android:text="Location"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_location"
                            style="@style/text_bottom_sheet_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:gravity="right"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvOwner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/Owner"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:fontFamily="@font/poppins_bold"
                            android:text="Owner"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_Owner"
                            style="@style/text_bottom_sheet_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:gravity="right"
                            android:textColor="@color/text_color" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/ic_box">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/txvExpectedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_expected_value"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/_18sdp" />

                    <TextView
                        android:id="@+id/txvExpectedValueRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/txvVehicleCondition"
                        android:textSize="@dimen/_14sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_vehicle_condition"
                        android:textColor="@color/text_color" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin"
                        android:background="@color/window_back_grey_1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/poor"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:maxLines="1"
                            android:minLines="1"
                            android:paddingStart="@dimen/dp6"
                            android:paddingTop="@dimen/default_margin"
                            android:paddingEnd="@dimen/dp6"
                            android:paddingBottom="@dimen/default_margin"
                            android:text="@string/txt_fair"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#d6d6d6" />

                        <TextView
                            android:id="@+id/good"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:maxLines="1"
                            android:minLines="1"
                            android:paddingStart="@dimen/dp6"
                            android:paddingTop="@dimen/default_margin"
                            android:paddingEnd="@dimen/dp6"
                            android:paddingBottom="@dimen/default_margin"
                            android:text="@string/txt_good"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#d6d6d6" />



                        <TextView
                            android:id="@+id/excellent"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:maxLines="1"
                            android:minLines="1"
                            android:paddingStart="@dimen/dp6"
                            android:paddingTop="@dimen/default_margin"
                            android:paddingEnd="@dimen/dp6"
                            android:paddingBottom="@dimen/default_margin"
                            android:text="@string/txt_excellent"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txvPriceDisclaimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/txt_price_disclaimer"
                        android:textColor="@color/text_color"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>


            <Button
                android:id="@+id/btn_sell"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_16dp"
                android:text="Sell Your Car" />


        </LinearLayout>





    </LinearLayout>




    </ScrollView>

</LinearLayout>